objects/adapps__OptimizerPlus_Inactive_Val_Rules_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Inactive_Validation_Rules__c</fullName>
        <label>Inactive Validation Rules</label>
        <referenceTo>adapps__OptimizerPlus_Inactive_Val_Rules__c</referenceTo>
        <relationshipLabel>Inactive Validation Rules Item</relationshipLabel>
        <relationshipName>Inactive_Validation_Rules_Item</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>adapps__Validation_Rule_Name__c</fullName>
        <label>Validation Rule Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Inactive Validation Rules Item</label>
    <nameField>
        <label>Inactive Validation Rules Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inactive Validation Rules Item</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>